fix z-index

--- a/src/components/circlesEffect/circlesEffect.css
+++ b/src/components/circlesEffect/circlesEffect.css
@@ -5,7 +5,6 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    z-index: 2;   
 }
 
 /* .circles:before {
@@ -36,7 +35,6 @@
     background-image: linear-gradient(225deg, #ff3cac 0%, #784ba0 50%, #2b86c5 100%);
     animation: animate 25s linear infinite;
     bottom: -150px;
-    z-index: 2;
 }
 
 .dark .circles li{
